[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alita_tools"
version = "0.3.5"
authors = [
  { name="Artem Rozumenko", email="support@projectalita.ai" },
  { name="Artem Dubrovskii", email="artem_dubrovskii@epam.com"}
]
description = "Default set of tools and toolkits available within ELITEA Agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://projectalita.ai"
Issues = "https://github.com/ProjectAlita/application-tools/issues"

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-v -ra -q -p no:warnings --ignore=src/alita_tools/ado/test_plan --rootdir=src --alluredir=allure-results"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
cache_dir = ".pytest_cache"
python_files = "test_*.py"
python_functions = "test_"
testpaths = [
    "tests",
    "tests/ado"
]