[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "alita_tools"
version = "0.3.58"
description = "Default set of tools and toolkits available within ELITEA Agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent",]
dynamic = [ "dependencies",]
[[project.authors]]
name = "Artem Rozumenko"
email = "support@projectalita.ai"

[[project.authors]]
name = "Artem Dubrovskii"
email = "artem_dubrovskii@epam.com"

[project.urls]
Homepage = "https://projectalita.ai"
Issues = "https://github.com/ProjectAlita/application-tools/issues"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = """
        --cov-report term-missing --cov-branch --cov-report html --cov-report term
        --cov=. --cov-context=test
        -v -ra -q -p no:warnings 
        --ignore=src/alita_tools/ado/test_plan 
        --rootdir=src --alluredir=allure-results
        """
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
cache_dir = ".pytest_cache"
python_files = "test_*.py"
python_functions = "test_"
testpaths = [
    "tests",
    "tests/ado"
]